# dsa110-xengine

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  dsaX.h  dsaX_beamformer_correlator.h  dsaX_blas_interface.h  dsaX_cublas_interface.h  dsaX_cuda_headers.h  dsaX_cuda_interface.h  dsaX_cuda_kernels.h  dsaX_cutlass_interface.h  dsaX_def.h  dsaX_enums.h  dsaX_ftd.h  dsaX_interface.h  dsaX_magma_headers.h  dsaX_magma_interface.h  dsaX_params.h  dsaX_psrdada_headers.h  dsaX_psrdada_utils.h  dsaX_utils.h
legacy/: 11_planar_complex_array.cu  11_planar_complex_array.cu~  CMakeLists.txt  CMakeLists.txt~  Makefile  cuda_correlator  dsaX_beamformer.cu  dsaX_beamformer.cu.wrk1  dsaX_beamformer_passon  dsaX_beamformer_passon.cu  dsaX_bfCorr.cu  dsaX_bigfake.c  dsaX_capture_manythread.c  dsaX_copydb.c  dsaX_cuda_correlator.cu  dsaX_cutlass_interface.cu  dsaX_cutlass_interface.cu~  dsaX_cutlass_interface.h~  dsaX_def.h  dsaX_fake.c  dsaX_filTrigger.c  dsaX_fluff.c  dsaX_makeFil.c  dsaX_nicdb.c.bak  dsaX_reorder_raw.c.bak  dsaX_splice.c  dsaX_split.c  dsaX_store.c  dsaX_trigger.c  dsaX_wrangle  dsaX_wrangle.c  dsaX_wrangleAndWrite.c  dsaX_writeFil.c  dumpfil.c  fil2dada.c  flagger.c  gpu_flagger.cu  planar_complex.cu  planar_complex.cu~  spectrometer_header.txt  (+1 more)
scripts/: .gitignore  bb_corr.py  bb_fil.py  bf.py  bf.py~  config_capture.yaml  config_corr.yaml  config_corr.yaml.wrk  config_corr_h5.yaml  config_search.yaml  config_test.yaml  config_test_ct.yaml  control.py  control.py~  corr.py  corr_full.py  dsa_parameters.yaml  launch.py  launch.py~  look_after_dumps.py  loop_corr.bash  mon.py  proc.bash  run_rsync.bash  send_trig.py  test.py  test.py~  test_addpulse.py  test_bf.py  test_cornerturn.py  test_cornerturn.py~  test_corr.py  test_reorder.py  test_search.py  test_split.py  test_tworead.py  test_xgpu.py
src/: #tt.c#  .bffil2allbeams.c.swo  .bffil2allbeams.c.swp  .gitignore  11_planar_complex_array.cu  CMakeLists.txt  Makefile  bffil2allbeams.c  cuda_correlator.cu  dsaX_beamformer  dsaX_beamformer.cpp  dsaX_beamformer.cu  dsaX_beamformer.cu.wrk1  dsaX_beamformer_correlator.cu  dsaX_beamformer_offline.cu  dsaX_beamformer_passon.cu  dsaX_bfCorr.cu  dsaX_blas_interface.cpp  dsaX_blas_interface.cu  dsaX_capture  dsaX_capture.c  dsaX_capture.h  dsaX_capture_manythread.c  dsaX_capture_manythread.c.bak  dsaX_capture_manythread.h  dsaX_capture_pcap.c  dsaX_capture_pcap.h  dsaX_capture_thread.c  dsaX_copydb.c  dsaX_correlator.cpp  dsaX_cublas_interface.cu  dsaX_cuda_interface.cu  dsaX_dbnic  dsaX_dbnic.c  dsaX_dbnic.c.bak  dsaX_def.h  dsaX_fake  dsaX_fake.c  dsaX_filTrigger.c  dsaX_fluff.c  (+42 more)
tests/: CMakeLists.txt  CMakeLists.txt~  command_line_params.cpp  command_line_params.h  dsaX_beamformer_correlator_test.cpp  dsaX_beamformer_correlator_test.cpp~  dsaX_correlator_test.cpp
tests/utils/: .gitignore  CMakeLists.txt  CMakeLists.txt~  gen_packet.py  get_rms_packet.py  test.out
utils/: .gitignore  antennas.out  gen_antennas.py  gen_packet.py  gen_testblock.py  get_rms.py  packet.out  sockets.py
